force-app/main/default/objects/ID_Request__c/ID_Request__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ID - Request</label>
</CustomObject>