force-app/main/default/objects/ID_Request__c/fields/Id_RecordType_Request_Material_Packing_L__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Request_Material_Packing_L__c</fullName>
    <label>Id RecordType Request Material Packing L</label>
    <length>255</length>
    <type>Text</type>
</CustomField>