force-app/main/default/objects/ID_Request__c/fields/Id_RecordType_Request_Vendor_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Request_Vendor_Vetting__c</fullName>
    <label>Id RecordType Request Vendor Vetting</label>
    <length>18</length>
    <type>Text</type>
</CustomField>