force-app/main/default/objects/ID_Request__c/fields/Id_RecordType_Request_Vetting_Senegal__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Request_Vetting_Senegal__c</fullName>
    <label>Id RecordType Request Vetting Senegal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>